--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hola mundo</title>
 </head>
 <body>
-    <p>Hola gente este es mi sitio web, sígueme para más consejos</p>
+    <p>Hola gente este es mi sitio web, sígueme para más consejos or whatever</p>
 </body>
 </html>
